fixing negative global event button, left align create game button

--- a/src/styles/create_game_form.less
+++ b/src/styles/create_game_form.less
@@ -48,8 +48,9 @@
 }
 
 .create-game-action {
-    margin: 40px auto;
-    text-align: center;
+    margin: 40px 5px;
+    pading-left: 15px;
+    text-align: left;
     width: 100%;
 }
 
